footer and testimonial changed

--- a/404.html
+++ b/404.html
@@ -63,7 +63,7 @@
     <!-- preloader -->
     <div id="preloader">
       <div id="spinner">
-        <img src="images/preloaders/4.gif" alt="">
+        <img src="images/preloaders/4.gif" alt="image_not_found">
       </div>
     </div>
 
