--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     <!-- preloader -->
     <div id="preloader">
       <div id="spinner">
-        <img alt="" src="images/preloaders/2.gif">
+        <img alt="image_not_found" src="images/preloaders/2.gif">
       </div>
     </div>
 
@@ -111,7 +111,7 @@
                 <li class="active">
                   <a href="about.html">About</a>
                 </li>
-                
+
                 <li>
                   <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
@@ -174,16 +174,17 @@
                 <div class="video-popup">
                   <a href="https://www.youtube.com/watch?v=pW1uVUg5wXM" data-lightbox-gallery="youtube-video"
                     title="Video">
-                    <img alt="" src="images/mainimages/about_image_home.jpg"
+                    <img alt="image_not_found" src="images/mainimages/about_image_home.jpg"
                       class="img-responsive img-fullwidth mt-10 ml-30 ml-xs-0 ml-sm-0">
                     <div
                       style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 2; font-size: 4em;">
                       <!-- Use your preferred icon, e.g., Font Awesome -->
-                      <i class="fa fa-toggle-right " style="color: #e44178" ></i>
+                      <i class="fa fa-toggle-right " style="color: #e44178"></i>
                     </div>
                   </a>
                 </div>
-              </div>            </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -216,7 +217,8 @@
                           <i class="fa fa-building-o"></i>
                         </a>
                         <div class="icon-box-details ml-sm-0">
-                          <h5 class="icon-box-title mt-15 letter-space-1 font-weight-600 mb-5">Industry-Relevant Training
+                          <h5 class="icon-box-title mt-15 letter-space-1 font-weight-600 mb-5">Industry-Relevant
+                            Training
                           </h5>
                           <p class="text-gray">Gain comprehensive, industry-specific training from experienced
                             instructors, equipping you with practical knowledge and skills.</p>
@@ -252,7 +254,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6">
                       <div class="icon-box p-0 mb-30">
                         <a href="#" class="icon bg-theme-colored pull-left sm-pull-none flip mr-10">
-                          <i class="fa fa-retweet"></i>                        </a>
+                          <i class="fa fa-retweet"></i> </a>
                         <div class="icon-box-details ml-sm-0">
                           <h5 class="icon-box-title mt-15 letter-space-1 font-weight-600 mb-5">Holistic Skill
                             Development</h5>
@@ -294,7 +296,8 @@
                     </div>
                     <div class="content mt-20">
                       <div class="thumb pull-left flip">
-                        <img width="64" src="images/testimonials/1.jpg" alt="" class="img-circle" />
+                        <img width="64" src="images/mainimages/TESTIMONIAL_MAIL.png" alt="image_not_found"
+                          class="img-circle" />
                       </div>
                       <div class="testimonials-details pull-left flip ml-20">
                         <h5 class="author text-theme-color-2 mt-0 mb-0 font-weight-600">
@@ -324,7 +327,8 @@
                     </div>
                     <div class="content mt-20">
                       <div class="thumb pull-left flip">
-                        <img width="64" src="images/testimonials/2.jpg" alt="" class="img-circle" />
+                        <img width="64" src="images/mainimages/TESTIMONIAL_MAIL.png" alt="image_not_found"
+                          class="img-circle" />
                       </div>
                       <div class="testimonials-details pull-left flip ml-20">
                         <h5 class="author text-theme-color-2 mt-0 mb-0 font-weight-600">
@@ -354,7 +358,7 @@
                     </div>
                     <div class="content mt-20">
                       <div class="thumb pull-left flip">
-                        <img width="64" src="images/testimonials/3.jpg" alt="" class="img-circle" />
+                        <img width="64" src="images/testimonials/3.jpg" alt="image_not_found" class="img-circle" />
                       </div>
                       <div class="testimonials-details pull-left flip ml-20">
                         <h5 class="author text-theme-color-2 mt-0 mb-0 font-weight-600">
@@ -388,31 +392,31 @@
               <!-- Section: Clients -->
               <div class="owl-carousel-6col transparent text-center owl-nav-top">
                 <div class="item">
-                  <a href="#"><img src="images/mainimages/placement_main_1.jpg" alt="" /></a>
+                  <a href="#"><img src="images/mainimages/placement_main_1.jpg" alt="image_not_found" /></a>
                 </div>
                 <div class="item">
-                  <a href="#"><img src="images/mainimages/placement_main_4.jpg" alt="" /></a>
+                  <a href="#"><img src="images/mainimages/placement_main_4.jpg" alt="image_not_found" /></a>
                 </div>
                 <div class="item">
-                  <a href="#"><img src="images/mainimages/placement_main_5.jpg" alt="" /></a>
+                  <a href="#"><img src="images/mainimages/placement_main_5.jpg" alt="image_not_found" /></a>
                 </div>
                 <div class="item">
-                  <a href="#"><img src="images/mainimages/placement_consulting_2.jpg" alt="" /></a>
+                  <a href="#"><img src="images/mainimages/placement_consulting_2.jpg" alt="image_not_found" /></a>
                 </div>
                 <div class="item">
-                  <a href="#"><img src="images/mainimages/placement_main_3.jpg" alt="" /></a>
+                  <a href="#"><img src="images/mainimages/placement_main_3.jpg" alt="image_not_found" /></a>
                 </div>
                 <div class="item">
-                  <a href="#"><img src="images/mainimages/placement_main_4.jpg" alt="" /></a>
+                  <a href="#"><img src="images/mainimages/placement_main_4.jpg" alt="image_not_found" /></a>
                 </div>
                 <div class="item">
-                  <a href="#"><img src="images/mainimages/placement_finacial_1.jpg" alt="" /></a>
+                  <a href="#"><img src="images/mainimages/placement_finacial_1.jpg" alt="image_not_found" /></a>
                 </div>
                 <div class="item">
-                  <a href="#"><img src="images/mainimages/placement_main_2.jpg" alt="" /></a>
+                  <a href="#"><img src="images/mainimages/placement_main_2.jpg" alt="image_not_found" /></a>
                 </div>
                 <div class="item">
-                  <a href="#"><img src="images/mainimages/placement_main_3.jpg" alt="" /></a>
+                  <a href="#"><img src="images/mainimages/placement_main_3.jpg" alt="image_not_found" /></a>
                 </div>
               </div>
             </div>
@@ -426,18 +430,21 @@
     <footer id="footer" class="footer bg-black-222">
       <div class="container pt-70 pb-30">
         <div class="row border-bottom-black">
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-4 col-md-3">
             <div class="widget dark">
               <h5 class="widget-title mb-10">Contact Us</h5>
-              <!-- <img class="mt-10 mb-20" alt="" src="images/mainimages/Logo_transparent.png"> -->
+              <!-- <img class="mt-10 mb-20" alt="image_not_found" src="images/mainimages/Logo_transparent.png"> -->
               <ul class="list-inline mt-5">
+                <h6 class="widget-title mb-10">Prospire Bangalore Chapter
+                </h6>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a
-                    class="text-gray" href="#">Near Nandilath G Mart, Thavakkara Road, Caltex, Kannur</a> </li>
+                    class="text-gray" href="#">Prestige Atlanta, 80 Feet Rd, Koramangala 1A Block,
+                    Koramangala,,Bengaluru, Karnataka 560034</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
-                    href="#">+91 8891095660</a> </li>
+                    href="#">+91 9633213660</a> </li>
 
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a
-                    class="text-gray" href="#"> educationprospire@gmail.com</a> </li>
+                    class="text-gray" href="info@prospireeducation.in">info@prospireeducation.in</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray"
                     href="https://prospireeducation.in/">https://prospireeducation.in/</a> </li>
               </ul>
@@ -455,20 +462,52 @@
             </div>
 
           </div>
+          <div class="col-sm-4 col-md-3">
+            <div class="widget dark">
+              <h5 class="widget-title mb-10">Contact Us</h5>
+              <!-- <img class="mt-10 mb-20" alt="image_not_found" src="images/mainimages/Logo_transparent.png"> -->
+              <ul class="list-inline mt-5">
+                <h6 class="widget-title mb-10">Prospire Kannur Chapter</h6>
 
-          <div class="col-sm-6 col-md-4">
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a
+                    class="text-gray" href="#">Central Mall, 2nd Floor, Thavakkara,Kannur,670001</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
+                    href="#">+91 8891095660</a> </li>
+
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a
+                    class="text-gray" href="info@prospireeducation.in"> info@prospireeducation.in</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray"
+                    href="https://prospireeducation.in/">https://prospireeducation.in/</a> </li>
+              </ul>
+            </div>
+            <br><br>
+            <div class="widget dark">
+              <h6 class="widget-title mb-0 text-gray-darkgray">Connect With Us</h6>
+              <ul class="styled-icons icon-dark icon-circled icon-sm mt-10">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+              </ul>
+            </div>
+
+          </div>
+
+          <div class="col-sm-4 col-md-3">
             <div class="widget dark">
               <h5 class="widget-title line-bottom">Useful Links</h5>
               <ul class="list-border">
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="course.html">Courses</a></li>
-                
+
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-4 col-md-3">
             <div class="widget dark mb-20">
               <h5 class="widget-title line-bottom">Our Course</h5>
               <ul class="list-border font-13">
