--- a/course.html
+++ b/course.html
@@ -68,7 +68,7 @@
     <!-- preloader -->
     <div id="preloader">
       <div id="spinner">
-        <img alt="" src="images/preloaders/2.gif">
+        <img alt="image_not_found" src="images/preloaders/2.gif">
       </div>
     </div>
 
@@ -115,7 +115,7 @@
                 <li>
                   <a href="about.html">About</a>
                 </li>
-                
+
                 <li>
                   <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
@@ -156,7 +156,7 @@
               <div class="col-sm-6 col-md-4 col-lg-4">
                 <div class="schedule-box maxwidth500 bg-light mb-30">
                   <div class="thumb">
-                    <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_4.jpg">
+                    <img class="img-fullwidth" alt="image_not_found" src="images/mainimages/cources_image_4.jpg">
                     <div class="overlay">
                       <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
@@ -182,7 +182,7 @@
               <div class="col-sm-6 col-md-4 col-lg-4">
                 <div class="schedule-box maxwidth500 bg-light mb-30">
                   <div class="thumb">
-                    <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_3.avif">
+                    <img class="img-fullwidth" alt="image_not_found" src="images/mainimages/cources_image_3.avif">
                     <div class="overlay">
                       <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
@@ -209,7 +209,7 @@
               <div class="col-sm-6 col-md-4 col-lg-4">
                 <div class="schedule-box maxwidth500 bg-light mb-30">
                   <div class="thumb">
-                    <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_6.jpg">
+                    <img class="img-fullwidth" alt="image_not_found" src="images/mainimages/cources_image_6.jpg">
                     <div class="overlay">
                       <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
@@ -236,7 +236,7 @@
               <div class="col-sm-6 col-md-4 col-lg-4">
                 <div class="schedule-box maxwidth500 bg-light mb-30">
                   <div class="thumb">
-                    <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_1.jpg">
+                    <img class="img-fullwidth" alt="image_not_found" src="images/mainimages/cources_image_1.jpg">
                     <div class="overlay">
                       <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
@@ -263,7 +263,7 @@
               <div class="col-sm-6 col-md-4 col-lg-4">
                 <div class="schedule-box maxwidth500 bg-light mb-30">
                   <div class="thumb">
-                    <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_5.jpg">
+                    <img class="img-fullwidth" alt="image_not_found" src="images/mainimages/cources_image_5.jpg">
                     <div class="overlay">
                       <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
@@ -290,7 +290,7 @@
               <div class="col-sm-6 col-md-4 col-lg-4">
                 <div class="schedule-box maxwidth500 bg-light mb-30">
                   <div class="thumb">
-                    <img class="img-fullwidth" alt="" src="images/mainimages/cources_image_2.jpg">
+                    <img class="img-fullwidth" alt="image_not_found" src="images/mainimages/cources_image_2.jpg">
                     <div class="overlay">
                       <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
@@ -327,18 +327,21 @@
     <footer id="footer" class="footer bg-black-222">
       <div class="container pt-70 pb-30">
         <div class="row border-bottom-black">
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-4 col-md-3">
             <div class="widget dark">
               <h5 class="widget-title mb-10">Contact Us</h5>
-              <!-- <img class="mt-10 mb-20" alt="" src="images/mainimages/Logo_transparent.png"> -->
+              <!-- <img class="mt-10 mb-20" alt="image_not_found" src="images/mainimages/Logo_transparent.png"> -->
               <ul class="list-inline mt-5">
+                <h6 class="widget-title mb-10">Prospire Bangalore Chapter
+                </h6>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a
-                    class="text-gray" href="#">Near Nandilath G Mart, Thavakkara Road, Caltex, Kannur</a> </li>
+                    class="text-gray" href="#">Prestige Atlanta, 80 Feet Rd, Koramangala 1A Block,
+                    Koramangala,,Bengaluru, Karnataka 560034</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
-                    href="#">+91 8891095660</a> </li>
+                    href="#">+91 9633213660</a> </li>
 
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a
-                    class="text-gray" href="#"> educationprospire@gmail.com</a> </li>
+                    class="text-gray" href="info@prospireeducation.in">info@prospireeducation.in</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray"
                     href="https://prospireeducation.in/">https://prospireeducation.in/</a> </li>
               </ul>
@@ -356,20 +359,52 @@
             </div>
 
           </div>
+          <div class="col-sm-4 col-md-3">
+            <div class="widget dark">
+              <h5 class="widget-title mb-10">Contact Us</h5>
+              <!-- <img class="mt-10 mb-20" alt="image_not_found" src="images/mainimages/Logo_transparent.png"> -->
+              <ul class="list-inline mt-5">
+                <h6 class="widget-title mb-10">Prospire Kannur Chapter</h6>
 
-          <div class="col-sm-6 col-md-4">
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a
+                    class="text-gray" href="#">Central Mall, 2nd Floor, Thavakkara,Kannur,670001</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
+                    href="#">+91 8891095660</a> </li>
+
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a
+                    class="text-gray" href="info@prospireeducation.in"> info@prospireeducation.in</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray"
+                    href="https://prospireeducation.in/">https://prospireeducation.in/</a> </li>
+              </ul>
+            </div>
+            <br><br>
+            <div class="widget dark">
+              <h6 class="widget-title mb-0 text-gray-darkgray">Connect With Us</h6>
+              <ul class="styled-icons icon-dark icon-circled icon-sm mt-10">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+              </ul>
+            </div>
+
+          </div>
+
+          <div class="col-sm-4 col-md-3">
             <div class="widget dark">
               <h5 class="widget-title line-bottom">Useful Links</h5>
               <ul class="list-border">
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="course.html">Courses</a></li>
-                
+
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-4 col-md-3">
             <div class="widget dark mb-20">
               <h5 class="widget-title line-bottom">Our Course</h5>
               <ul class="list-border font-13">
