--- a/enrolledagent.html
+++ b/enrolledagent.html
@@ -63,7 +63,7 @@
     <!-- preloader -->
     <div id="preloader">
       <div id="spinner">
-        <img alt="" src="images/preloaders/2.gif">
+        <img alt="image_not_found" src="images/preloaders/2.gif">
       </div>
     </div>
 
@@ -110,7 +110,7 @@
                 <li>
                   <a href="about.html">About</a>
                 </li>
-                
+
                 <li>
                   <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
@@ -128,9 +128,9 @@
       <section id="home" class="divider parallax" data-bg-img="images/bg/bg1.jpg">
         <div class="maximage-slider">
           <div id="maximage">
-            <!-- <img src="images/bg/bg7.jpg" alt="" /> -->
-            <img src="images/mainimages/cources_page_2.jpg" alt="" />
-            <!-- <img src="images/bg/bg1.jpg" alt="" /> -->
+            <!-- <img src="images/bg/bg7.jpg" alt="image_not_found" /> -->
+            <img src="images/mainimages/cources_page_2.jpg" alt="image_not_found" />
+            <!-- <img src="images/bg/bg1.jpg" alt="image_not_found" /> -->
           </div>
           <div class="fullscreen-controls"> <a class="img-prev"><i class="pe-7s-angle-left"></i></a> <a
               class="img-next"><i class="pe-7s-angle-right"></i></a> </div>
@@ -165,7 +165,7 @@
           <div class="row">
             <div class="col-md-8 blog-pull-right">
               <div class="single-service">
-                <img src="images/services/lg3.jpg" alt="">
+                <img src="images/services/lg3.jpg" alt="image_not_found">
                 <h3 class="text-theme-colored">ENROLLED AGENT
                 </h3>
                 <h5><em><span class="text-theme-color-2">Dear Asperent , </span> <br />" Welcome to the premier
@@ -183,16 +183,16 @@
                     and ever-evolving field of taxation. <span class="text-theme-color-2">Join us on the journey to
                       becoming a future tax professional, where excellence meets opportunity.
                       <span> </em>"</h5>
-                        <br/><br/><br/><br/>
-                <img src="images/mainimages/EA_TREE.jpg" alt="">
-                <br/><br/><br/>
+                <br /><br /><br /><br />
+                <img src="images/mainimages/EA_TREE.jpg" alt="image_not_found">
+                <br /><br /><br />
                 <div class="row">
                   <div class="col-md-12">
                     <h3 class="text-theme-colored">Features of the course </h3>
-                    <br/><br/>
-                    <img src="images/mainimages/EA_flow_chart.png" alt="">
-                    <br><br/><br/>
-                    <img src="images/mainimages/EA_StageExplaining.png" alt="">
+                    <br /><br />
+                    <img src="images/mainimages/EA_flow_chart.png" alt="image_not_found">
+                    <br><br /><br />
+                    <img src="images/mainimages/EA_StageExplaining.png" alt="image_not_found">
                     <br><br><br>
                   </div>
                 </div>
@@ -231,7 +231,8 @@
                         </div>
                         <div class="content mt-20">
                           <div class="thumb pull-right">
-                            <img class="img-circle" alt="" src="images/testimonials/2.jpg">
+                            <img class="img-circle" alt="image_not_found" width="64"
+                              src="images/mainimages/TESTIMONIAL_MAIL.png">
                           </div>
                           <div class="patient-details text-right pull-right mr-20 mt-10">
                             <h5 class="author">student name</h5>
@@ -247,7 +248,8 @@
                         </div>
                         <div class="content mt-20">
                           <div class="thumb pull-right">
-                            <img class="img-circle" alt="" src="images/testimonials/2.jpg">
+                            <img class="img-circle" alt="image_not_found" width="64"
+                              src="images/mainimages/TESTIMONIAL_MAIL.png">
                           </div>
                           <div class="patient-details text-right pull-right mr-20 mt-10">
                             <h5 class="author">student name</h5>
@@ -262,7 +264,8 @@
                         </div>
                         <div class="content mt-20">
                           <div class="thumb pull-right">
-                            <img class="img-circle" alt="" src="images/testimonials/2.jpg">
+                            <img class="img-circle" alt="image_not_found" width="64"
+                              src="images/mainimages/TESTIMONIAL_MAIL.png">
                           </div>
                           <div class="patient-details text-right pull-right mr-20 mt-10">
                             <h5 class="author">student name</h5>
@@ -278,7 +281,8 @@
                         </div>
                         <div class="content mt-20">
                           <div class="thumb pull-right">
-                            <img class="img-circle" alt="" src="images/testimonials/2.jpg">
+                            <img class="img-circle" alt="image_not_found" width="64"
+                              src="images/mainimages/TESTIMONIAL_MAIL.png">
                           </div>
                           <div class="patient-details text-right pull-right mr-20 mt-10">
                             <h5 class="author">student name</h5>
@@ -427,7 +431,7 @@
                 </div>
                 <div class="widget">
                   <h3 class="text-theme-colored">PLACEMENT COMPANIES:-</h3>
-                  <img src="images/mainimages/CMA_USA_PLACEMENT_COMPANIES.png" alt="">
+                  <img src="images/mainimages/CMA_USA_PLACEMENT_COMPANIES.png" alt="image_not_found">
                 </div>
                 <div class="widget">
                   <h4 class="widget-title line-bottom">Courses List</h4>
@@ -449,7 +453,7 @@
       </section>
       <section>
         <div style="text-align: center;">
-          <img src="images/mainimages/EA_certification.png" alt="" style="width: 900px;">
+          <img src="images/mainimages/EA_certification.png" alt="image_not_found" style="width: 900px;">
         </div>
 
       </section>
@@ -460,18 +464,21 @@
     <footer id="footer" class="footer bg-black-222">
       <div class="container pt-70 pb-30">
         <div class="row border-bottom-black">
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-4 col-md-3">
             <div class="widget dark">
               <h5 class="widget-title mb-10">Contact Us</h5>
-              <!-- <img class="mt-10 mb-20" alt="" src="images/mainimages/Logo_transparent.png"> -->
+              <!-- <img class="mt-10 mb-20" alt="image_not_found" src="images/mainimages/Logo_transparent.png"> -->
               <ul class="list-inline mt-5">
+                <h6 class="widget-title mb-10">Prospire Bangalore Chapter
+                </h6>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a
-                    class="text-gray" href="#">Near Nandilath G Mart, Thavakkara Road, Caltex, Kannur</a> </li>
+                    class="text-gray" href="#">Prestige Atlanta, 80 Feet Rd, Koramangala 1A Block,
+                    Koramangala,,Bengaluru, Karnataka 560034</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
-                    href="#">+91 8891095660</a> </li>
+                    href="#">+91 9633213660</a> </li>
 
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a
-                    class="text-gray" href="#"> educationprospire@gmail.com</a> </li>
+                    class="text-gray" href="info@prospireeducation.in">info@prospireeducation.in</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray"
                     href="https://prospireeducation.in/">https://prospireeducation.in/</a> </li>
               </ul>
@@ -489,20 +496,52 @@
             </div>
 
           </div>
+          <div class="col-sm-4 col-md-3">
+            <div class="widget dark">
+              <h5 class="widget-title mb-10">Contact Us</h5>
+              <!-- <img class="mt-10 mb-20" alt="image_not_found" src="images/mainimages/Logo_transparent.png"> -->
+              <ul class="list-inline mt-5">
+                <h6 class="widget-title mb-10">Prospire Kannur Chapter</h6>
 
-          <div class="col-sm-6 col-md-4">
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a
+                    class="text-gray" href="#">Central Mall, 2nd Floor, Thavakkara,Kannur,670001</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
+                    href="#">+91 8891095660</a> </li>
+
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a
+                    class="text-gray" href="info@prospireeducation.in"> info@prospireeducation.in</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray"
+                    href="https://prospireeducation.in/">https://prospireeducation.in/</a> </li>
+              </ul>
+            </div>
+            <br><br>
+            <div class="widget dark">
+              <h6 class="widget-title mb-0 text-gray-darkgray">Connect With Us</h6>
+              <ul class="styled-icons icon-dark icon-circled icon-sm mt-10">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+              </ul>
+            </div>
+
+          </div>
+
+          <div class="col-sm-4 col-md-3">
             <div class="widget dark">
               <h5 class="widget-title line-bottom">Useful Links</h5>
               <ul class="list-border">
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="course.html">Courses</a></li>
-                
+
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-4 col-md-3">
             <div class="widget dark mb-20">
               <h5 class="widget-title line-bottom">Our Course</h5>
               <ul class="list-border font-13">
