--- a/gallery.html
+++ b/gallery.html
@@ -47,7 +47,7 @@
   <div id="wrapper" class="clearfix">
     <div id="preloader">
       <div id="spinner">
-        <img alt="" src="images/preloaders/2.gif">
+        <img alt="image_not_found" src="images/preloaders/2.gif">
       </div>
     </div>
 
@@ -209,11 +209,11 @@
                         <div class="flexslider">
                           <ul class="slides">
                             <li><a href="images/gallery/1.jpg" title="Portfolio Gallery - Photo 1"><img
-                                  src="images/gallery/1.jpg" alt=""></a></li>
+                                  src="images/gallery/1.jpg" alt="image_not_found"></a></li>
                             <li><a href="images/gallery/2.jpg" title="Portfolio Gallery - Photo 2"><img
-                                  src="images/gallery/2.jpg" alt=""></a></li>
+                                  src="images/gallery/2.jpg" alt="image_not_found"></a></li>
                             <li><a href="images/gallery/3.jpg" title="Portfolio Gallery - Photo 3"><img
-                                  src="images/gallery/3.jpg" alt=""></a></li>
+                                  src="images/gallery/3.jpg" alt="image_not_found"></a></li>
                           </ul>
                         </div>
                       </div>
@@ -392,7 +392,7 @@
     <!-- preloader -->
     <div id="preloader">
       <div id="spinner">
-        <img src="images/preloaders/4.gif" alt="">
+        <img src="images/preloaders/4.gif" alt="image_not_found">
       </div>
     </div>
 
