--- a/acca_ifrs.html
+++ b/acca_ifrs.html
@@ -63,7 +63,7 @@
     <!-- preloader -->
     <div id="preloader">
       <div id="spinner">
-        <img alt="" src="images/preloaders/2.gif">
+        <img alt="image_not_found" src="images/preloaders/2.gif">
       </div>
     </div>
 
@@ -110,7 +110,7 @@
                 <li>
                   <a href="about.html">About</a>
                 </li>
-                
+
                 <li>
                   <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
@@ -127,9 +127,9 @@
       <section id="home" class="divider parallax" data-bg-img="images/bg/bg1.jpg">
         <div class="maximage-slider">
           <div id="maximage">
-            <img src="images/mainimages/cources_page_2.jpg" alt="" />
-            <!-- <img src="images/bg/bg5.jpg" alt="" />
-            <img src="images/bg/bg1.jpg" alt="" /> -->
+            <img src="images/mainimages/cources_page_2.jpg" alt="image_not_found" />
+            <!-- <img src="images/bg/bg5.jpg" alt="image_not_found" />
+            <img src="images/bg/bg1.jpg" alt="image_not_found" /> -->
           </div>
           <div class="fullscreen-controls"> <a class="img-prev"><i class="pe-7s-angle-left"></i></a> <a
               class="img-next"><i class="pe-7s-angle-right"></i></a> </div>
@@ -142,7 +142,8 @@
                   <h1 class="text-white text-uppercase font-60 font-weight-700 mb-0">ACCA-<span
                       class="text-theme-color-2">IFRS</span></h1>
                   <h2 class="title text-white "> Navigate Global Finance with Expertise and Confidence!</h2>
-                  <p class="font-16 text-white">Embark on a journey to master IFRS. Gain expertise and confidence to navigate the complexities of <br> global finance successfully. Enroll now!</p>
+                  <p class="font-16 text-white">Embark on a journey to master IFRS. Gain expertise and confidence to
+                    navigate the complexities of <br> global finance successfully. Enroll now!</p>
                   <a class="btn btn-colored btn-theme-colored btn-flat mt-15" href="contact.html">Contact Now</a>
                   <ol class="breadcrumb text-left text-black mt-10">
                     <li><a href="/">Home</a></li>
@@ -161,7 +162,7 @@
           <div class="row">
             <div class="col-md-8 blog-pull-right">
               <div class="single-service">
-                <!-- <img src="images/services/lg3.jpg" alt=""> -->
+                <!-- <img src="images/services/lg3.jpg" alt="image_not_found"> -->
                 <h3 class="text-theme-colored">DIPLOMA ACCA-IFRS</h3>
                 <h5><em><span class="text-theme-color-2">Dear Asperent , </span> <br /><span
                       class="text-theme-color-2">IFRS, embraced by over 140 nations, </span>is a global standard for
@@ -252,7 +253,8 @@
                 <div class="row ">
                   <div class="col-md-12 ">
                     <h4 class="title"> Syllabus </h4>
-                    <p>The diploma program addresses international financial reporting. It also covers first time application of international financial reporting standards. </p>
+                    <p>The diploma program addresses international financial reporting. It also covers first time
+                      application of international financial reporting standards. </p>
                     <table class="table table-bordered table-striped">
                       <colgroup>
                         <col class="col-xs-1">
@@ -324,7 +326,8 @@
                         </div>
                         <div class="content mt-20">
                           <div class="thumb pull-right">
-                            <img class="img-circle" alt="" src="images/testimonials/2.jpg">
+                            <img width="64" class="img-circle" alt="image_not_found"
+                              src="images/mainimages/TESTIMONIAL_MAIL.png">
                           </div>
                           <div class="patient-details text-right pull-right mr-20 mt-10">
                             <h5 class="author">student name</h5>
@@ -339,7 +342,8 @@
                         </div>
                         <div class="content mt-20">
                           <div class="thumb pull-right">
-                            <img class="img-circle" alt="" src="images/testimonials/2.jpg">
+                            <img width="64" class="img-circle" alt="image_not_found"
+                              src="images/mainimages/TESTIMONIAL_MAIL.png">
                           </div>
                           <div class="patient-details text-right pull-right mr-20 mt-10">
                             <h5 class="author">student name</h5>
@@ -355,7 +359,8 @@
                         </div>
                         <div class="content mt-20">
                           <div class="thumb pull-right">
-                            <img class="img-circle" alt="" src="images/testimonials/2.jpg">
+                            <img width="64" class="img-circle" alt="image_not_found"
+                              src="images/mainimages/TESTIMONIAL_MAIL.png">
                           </div>
                           <div class="patient-details text-right pull-right mr-20 mt-10">
                             <h5 class="author">student name</h5>
@@ -371,7 +376,8 @@
                         </div>
                         <div class="content mt-20">
                           <div class="thumb pull-right">
-                            <img class="img-circle" alt="" src="images/testimonials/2.jpg">
+                            <img width="64" class="img-circle" alt="image_not_found"
+                              src="images/mainimages/TESTIMONIAL_MAIL.png">
                           </div>
                           <div class="patient-details text-right pull-right mr-20 mt-10">
                             <h5 class="author">student name</h5>
@@ -556,18 +562,21 @@
     <footer id="footer" class="footer bg-black-222">
       <div class="container pt-70 pb-30">
         <div class="row border-bottom-black">
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-4 col-md-3">
             <div class="widget dark">
               <h5 class="widget-title mb-10">Contact Us</h5>
-              <!-- <img class="mt-10 mb-20" alt="" src="images/mainimages/Logo_transparent.png"> -->
+              <!-- <img class="mt-10 mb-20" alt="image_not_found" src="images/mainimages/Logo_transparent.png"> -->
               <ul class="list-inline mt-5">
+                <h6 class="widget-title mb-10">Prospire Bangalore Chapter
+                </h6>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a
-                    class="text-gray" href="#">Near Nandilath G Mart, Thavakkara Road, Caltex, Kannur</a> </li>
+                    class="text-gray" href="#">Prestige Atlanta, 80 Feet Rd, Koramangala 1A Block,
+                    Koramangala,,Bengaluru, Karnataka 560034</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
-                    href="#">+91 8891095660</a> </li>
+                    href="#">+91 9633213660</a> </li>
 
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a
-                    class="text-gray" href="#"> educationprospire@gmail.com</a> </li>
+                    class="text-gray" href="info@prospireeducation.in">info@prospireeducation.in</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray"
                     href="https://prospireeducation.in/">https://prospireeducation.in/</a> </li>
               </ul>
@@ -585,20 +594,52 @@
             </div>
 
           </div>
+          <div class="col-sm-4 col-md-3">
+            <div class="widget dark">
+              <h5 class="widget-title mb-10">Contact Us</h5>
+              <!-- <img class="mt-10 mb-20" alt="image_not_found" src="images/mainimages/Logo_transparent.png"> -->
+              <ul class="list-inline mt-5">
+                <h6 class="widget-title mb-10">Prospire Kannur Chapter</h6>
 
-          <div class="col-sm-6 col-md-4">
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a
+                    class="text-gray" href="#">Central Mall, 2nd Floor, Thavakkara,Kannur,670001</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
+                    href="#">+91 8891095660</a> </li>
+
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a
+                    class="text-gray" href="info@prospireeducation.in"> info@prospireeducation.in</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray"
+                    href="https://prospireeducation.in/">https://prospireeducation.in/</a> </li>
+              </ul>
+            </div>
+            <br><br>
+            <div class="widget dark">
+              <h6 class="widget-title mb-0 text-gray-darkgray">Connect With Us</h6>
+              <ul class="styled-icons icon-dark icon-circled icon-sm mt-10">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+              </ul>
+            </div>
+
+          </div>
+
+          <div class="col-sm-4 col-md-3">
             <div class="widget dark">
               <h5 class="widget-title line-bottom">Useful Links</h5>
               <ul class="list-border">
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="course.html">Courses</a></li>
-                
+
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-4 col-md-3">
             <div class="widget dark mb-20">
               <h5 class="widget-title line-bottom">Our Course</h5>
               <ul class="list-border font-13">
