--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
   <div id="wrapper" class="clearfix">
     <div id="preloader">
       <div id="spinner">
-        <img alt="" src="images/preloaders/2.gif">
+        <img alt="image_not_found" src="images/preloaders/2.gif">
       </div>
     </div>
 
@@ -156,7 +156,7 @@
                 <div class="col-sm-6 col-md-6 col-lg-6">
                   <div class="schedule-box maxwidth500 bg-light mb-30">
                     <div class="thumb">
-                      <img class="img-fullwidth" alt="" src="https://placehold.it/220x160">
+                      <img class="img-fullwidth" alt="image_not_found" src="https://placehold.it/220x160">
                       <div class="overlay">
                         <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                       </div>
@@ -179,7 +179,7 @@
                 <div class="col-sm-6 col-md-6 col-lg-6">
                   <div class="schedule-box maxwidth500 bg-light mb-30">
                     <div class="thumb">
-                      <img class="img-fullwidth" alt="" src="https://placehold.it/220x160">
+                      <img class="img-fullwidth" alt="image_not_found" src="https://placehold.it/220x160">
                       <div class="overlay">
                         <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                       </div>
@@ -202,7 +202,7 @@
                 <div class="col-sm-6 col-md-6 col-lg-6">
                   <div class="schedule-box maxwidth500 bg-light mb-30">
                     <div class="thumb">
-                      <img class="img-fullwidth" alt="" src="https://placehold.it/220x160">
+                      <img class="img-fullwidth" alt="image_not_found" src="https://placehold.it/220x160">
                       <div class="overlay">
                         <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                       </div>
@@ -225,7 +225,7 @@
                 <div class="col-sm-6 col-md-6 col-lg-6">
                   <div class="schedule-box maxwidth500 bg-light mb-30">
                     <div class="thumb">
-                      <img class="img-fullwidth" alt="" src="https://placehold.it/220x160">
+                      <img class="img-fullwidth" alt="image_not_found" src="https://placehold.it/220x160">
                       <div class="overlay">
                         <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                       </div>
@@ -248,7 +248,7 @@
                 <div class="col-sm-6 col-md-6 col-lg-6">
                   <div class="schedule-box maxwidth500 bg-light mb-30">
                     <div class="thumb">
-                      <img class="img-fullwidth" alt="" src="https://placehold.it/220x160">
+                      <img class="img-fullwidth" alt="image_not_found" src="https://placehold.it/220x160">
                       <div class="overlay">
                         <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                       </div>
@@ -271,7 +271,7 @@
                 <div class="col-sm-6 col-md-6 col-lg-6">
                   <div class="schedule-box maxwidth500 bg-light mb-30">
                     <div class="thumb">
-                      <img class="img-fullwidth" alt="" src="https://placehold.it/220x160">
+                      <img class="img-fullwidth" alt="image_not_found" src="https://placehold.it/220x160">
                       <div class="overlay">
                         <a href="#"><i class="fa fa-calendar mr-5"></i></a>
                       </div>
@@ -336,17 +336,17 @@
                   <h5 class="widget-title line-bottom">Image gallery with text</h5>
                   <div class="widget-image-carousel">
                     <div class="item">
-                      <img src="https://placehold.it/365x230" alt="">
+                      <img src="https://placehold.it/365x230" alt="image_not_found">
                       <h4 class="title">This is a Demo Title</h4>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae illum amet illo.</p>
                     </div>
                     <div class="item">
-                      <img src="https://placehold.it/365x230" alt="">
+                      <img src="https://placehold.it/365x230" alt="image_not_found">
                       <h4 class="title">This is a Demo Title</h4>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae illum amet illo.</p>
                     </div>
                     <div class="item">
-                      <img src="https://placehold.it/365x230" alt="">
+                      <img src="https://placehold.it/365x230" alt="image_not_found">
                       <h4 class="title">This is a Demo Title</h4>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae illum amet illo.</p>
                     </div>
@@ -520,7 +520,7 @@
     <!-- preloader -->
     <div id="preloader">
       <div id="spinner">
-        <img src="images/preloaders/4.gif" alt="">
+        <img src="images/preloaders/4.gif" alt="image_not_found">
       </div>
     </div>
 
