--- a/register.html
+++ b/register.html
@@ -43,7 +43,7 @@
   <div id="wrapper" class="clearfix">
     <div id="preloader">
       <div id="spinner">
-        <img alt="" src="images/preloaders/2.gif">
+        <img alt="image_not_found" src="images/preloaders/2.gif">
       </div>
     </div>
 
@@ -54,7 +54,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-6 col-md-push-3">
-                  <div class="text-center mb-60"><a href="#" class=""><img alt="" src="images/logo-wide-white.png"></a>
+                  <div class="text-center mb-60"><a href="#" class=""><img alt="image_not_found" src="images/logo-wide-white.png"></a>
                   </div>
                   <div class="bg-lightest border-1px p-30 mb-0">
                     <h3 class="text-theme-colored mt-0 pt-5"> Apply Now</h3>
@@ -229,7 +229,7 @@
     <!-- preloader -->
     <div id="preloader">
       <div id="spinner">
-        <img src="images/preloaders/4.gif" alt="">
+        <img src="images/preloaders/4.gif" alt="image_not_found">
       </div>
     </div>
 
